--- a/html/css/main.css
+++ b/html/css/main.css
@@ -140,8 +140,7 @@ body {
     border-width:0 0 0 1px;
     float:right;
 }
-#main-menu #mod-settings:hover,
-#main-menu #mod-settings.selected {
+#main-menu #mod-settings.uptodate {
     background-color:#000;
     background-position:-180px top;
 }
@@ -244,6 +243,18 @@ body {
     right:10px;
     bottom:50px;
     z-index:10;
+}
+
+#mod-upgrade .progressbar-wrapper {
+    border: 1px solid #444444;
+    border-radius: 3px;
+    height: 20px;
+    width: 330px;
+}
+
+#mod-upgrade .progressbar {
+    background-color: #8888ff;
+    height: 20px;
 }
 
 
