--- a/html/include/bank_pedalboard.html
+++ b/html/include/bank_pedalboard.html
@@ -9,5 +9,11 @@
             <img src="{{thumbnail}}?tstamp={{tstamp}}" />
             {{/thumbnail}}
         </div>
+	<div class="addressings">
+	  <div class="footswitch addressed"></div>
+	  <div class="footswitch addressed"></div>
+	  <div class="footswitch"></div>
+	  <div class="footswitch"></div>
+	</div>
     </div>
 </div>
