[NEW] rotary sensibility in address

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -14,6 +14,13 @@
                     <input name="min" type="number"/> - <input name="max" type="number"/>
                 </div>
             </div>
+	    <div class="sensibility control-group clearfix">
+	        <label>Sensibility</label>
+                <div class="mod-controls mod-range">
+                    <select name="steps">
+		    </select>
+                </div>
+	    </div>
             <div class="mod control-group clearfix">
                 <label>MOD</label>
                 <div class="mod-controls">
