--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -556,6 +556,19 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
     width:190px;
 }
 
+
+#registration-form.mod-box {
+    width:329px;
+}
+
+#registration-form.mod-box label {
+    width:125px;
+}
+
+#registration-form.mod-box select {
+    width:204px;
+}
+
 /* SHARE WINDOW */
 #share-window .box {
     margin-left: -300px;
