pedalboard hardware connections properly indexed and passed to resulting template. now we need proper layout (similar to feed) and filter by hardware connections

--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -5,6 +5,50 @@
     {{/thumbnail}}
   </div>
   <div class="info">
+                <div class="techspecs clearfix">
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-input.png"/>
+                        <div class="number">
+                            <div class="arrow-left"></div>
+                            <span>{{audio_inputs}}</span>
+                        </div>
+                    </div>
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-output.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{audio_outputs}}</span>
+                        </div>
+                    </div>
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-rotary.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{rotary_addressings}}</span>
+                        </div>
+                    </div>
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-footswitch.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{footswitch_addressings}}</span>
+                        </div>
+                    </div>
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-pedal.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{pedal_addressings}}</span>
+                        </div>
+                    </div>
+                    <div class="spec clearfix">
+                        <img src="img/cloud/icn-techspecs-midiin.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{midi_inputs}}</span>
+                        </div>
+                    </div>
+                </div>
     <span class="title">{{title}}</span>
     <span class="actions">
       <span class="js-load open">Open</span>
