--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -1,4 +1,4 @@
-<div class="plugin available-plugin js-available-effect">
+<div class="plugin available-plugin js-available-effect" mod-role="available-plugin" mod-plugin-id="{{_id}}">
     <div class="thumb">
         <img src="{{source}}/effect/image/thumbnail.png?url={{urle}}">
     </div>
