avatar server can be overrided

--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -3,7 +3,7 @@
     <ul class="feeds span12">
         {{#pedalboards}}
         <li class="feed clearfix">
-            <a class="avatar"><img src="http://gravatar.com/avatar/{{author.gravatar}}?s=64"/></a>
+            <a class="avatar"><img src="{{avatar_url}}/{{author.gravatar}}.png?s=64"/></a>
             <div class="content alignleft span10">
                 <p>On {{created}} <a>{{author.name}}</a> published <b>{{title}}</b>:</p>
                 <p class="screenshot">
