status icon in effects plugin now indicates plugin is either "not installed", "installed" or "outdated"

--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -4,7 +4,7 @@
     </div>
     <span class="title">{{label}}</span>
     <span class="author">{{author}}</span>
-    <span class="status{{#installedVersion}} installed{{/installedVersion}}"></span>
+    <span class="status {{status}}"></span>
     <!--
     <span class="rating four"></span>
     <span class="downloads">{{downloads}}</span>
