--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -11,7 +11,7 @@
                     <header>
                         <h1>{{title}}{{#subtitle}} - <span>{{subtitle}}</span>{{/subtitle}}</h1>
                         <p><a href="{{url}}">{{url}}</a></p>
-                        <p><span class="rating-label">Rating:</span> <span class="rating five"></span></p>
+                        <p><span class="rating-label">Rating:</span> <span class="rating"></span></p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
                             <br/>
@@ -45,6 +45,86 @@
                     </section>
                 </div>
                 <section class="comments-reviews clear">
+		  <section class="reviews">
+		    <h1>Reviews</h1>
+		    <article class="review">
+		      <h1>
+			Rate this plugin: 
+			<span class="rating js-rate">
+			  <div class="my-rate one"></div>
+			  <div class="my-rate two"></div>
+			  <div class="my-rate three"></div>
+			  <div class="my-rate four"></div>
+			  <div class="my-rate five"></div>
+			</span>
+		      </h1>
+		    </article>
+		    <!-- 
+			 <article class="review current-version">
+			   <h1>Average rating for the current version: <span class="rating five"></span> <span class="rating-label">26 Ratings</span></h1>
+			   <div class="detailed">
+			     <div class="detail clearfix">
+			       <span class="alignleft rating five"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">26</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating four"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating three"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating two"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating one"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			   </div>
+			 </article>
+			 <article class="review">
+			   <h1>Average rating for all versions: <span class="rating four"></span> <span class="rating-label">126 Ratings</span></h1>
+			   <div class="detailed">
+			     <div class="detail clearfix">
+			       <span class="alignleft rating five"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">26</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating four"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating three"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating two"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			     <div class="detail clearfix">
+			       <span class="alignleft rating one"></span>
+			       <span class="alignleft bar"><span class="alignleft progress-bar"></span></span>
+			       <span class="alignleft rating-number">0</span>
+			     </div>
+			   </div>
+			 </article>
+			 -->
+		  </section>
+
+		  <section class="comments">
+		  </section>
                 </section>
             </div>
         </div>
