link to wiki in plugin's info

--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -10,7 +10,7 @@
                 <div class="span9">
                     <header>
                         <h1>{{title}}{{#subtitle}} - <span>{{subtitle}}</span>{{/subtitle}}</h1>
-                        <p><a href="{{url}}">{{url}}</a></p>
+			<p></p>
                         <p><span class="rating-label">Rating:</span> <span class="rating"></span></p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
@@ -21,6 +21,7 @@
                             <button class="js-upgrade btn btn-info btn-mini hidden">Upgrade</button>
                             <button class="js-remove btn btn-danger btn-mini hidden">Remove</button>
                         </p>
+                        <p><a href="http://wiki.portalmod.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
                     </header>
                     <section class="content clearfix">
 		      <p>
