plugin category in interface

--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -10,7 +10,7 @@
                 <div class="span9">
                     <header>
                         <h1>{{title}}{{#subtitle}} - <span>{{subtitle}}</span>{{/subtitle}}</h1>
-			<p></p>
+			<p>{{category.0}}</p>
                         <p><span class="rating-label">Rating:</span> <span class="rating"></span></p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
